--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,10 +5,11 @@ $enable-ltr: true;
 $enable-rtl: true;
 
 // Import CoreUI for React components library
-@import '~@coreui/coreui/scss/coreui';
+@import '@coreui/coreui/scss/coreui';
+
 
 // Import Chart.js custom tooltips styles
-@import '~@coreui/chartjs/scss/coreui-chartjs';
+@import '@coreui/chartjs/scss/coreui-chartjs';
 @import 'layout';
 
 // If you want to add custom CSS you can put it here.
