--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -86,7 +86,7 @@ $secondary-base: rgba(0, 48, 73) !default;
 $secondary-50: rgba(0, 47, 73, 0.479) !default;
 $secondary-25: rgba(0, 47, 73, 0.205) !default;
 
-$link-color: rgb(226, 92, 9) !default;
+$link-color: rgb(247, 247, 247) !default;
 $link-decoration: underline !default;
 $link-shade-percentage: 20% !default;
 $link-hover-color: rgba($link-color, $link-shade-percentage) !default;
@@ -741,7 +741,7 @@ $h5-font-size: $font-size-base;
 // $btn-border-width:            $input-btn-border-width !default;
 
 // $btn-font-weight:             $font-weight-normal !default;
-// $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
+$btn-box-shadow: none !default;
 // $btn-focus-width:             $input-btn-focus-width !default;
 // $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;
 // $btn-disabled-opacity:        .65 !default;
