--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -410,6 +410,7 @@
   --cui-color-card-shadow: rgba(207, 192, 192, 0.2);
   --text-medium-emphasis: rgba(255, 255, 255, 0.6);
   --cui-emphasis-color-rgb: rgba(255, 255, 255, 0.6);
+  --cui-input-placeholder-color: rgba(255, 255, 255, 0.6);
   // Core UI Impact theme variables.
   --cui-header-hover-color: var(--cyberdrain-light);
   --cui-header-active-color: var(--cyberdrain-accent-blue);
