--- a/src/scss/_tenantselector.scss
+++ b/src/scss/_tenantselector.scss
@@ -41,7 +41,6 @@
   &__input {
     appearance: none;
     background: var(--cipp-search-bg);
-    border: 1px solid var(--cipp-search-border-color);
     border-radius: var(--cipp-border-radius);
     box-shadow: 0 0.0625rem 0.125rem rgb(0 0 0 / 15%);
     color: var(--cipp-search-color);
@@ -64,7 +63,7 @@
     }
 
     &:hover {
-      border: 1px solid var(--cipp-search-border-color);
+      border: none;
     }
 
     &:not([readonly]):focus {
@@ -114,8 +113,7 @@
 
   &__select {
     background: var(--cipp-search-bg);
-    border: 1px solid var(--cipp-search-border-color);
-    box-shadow: 0.25rem 0.25rem 0.125rem rgb(0 0 0 / 50%);
+    border-radius: var(--cipp-border-radius);
     color: var(--cipp-search-color);
   }
 
@@ -206,4 +204,15 @@
 
 .tenantDropdown {
   min-width: 25rem;
+  max-width: 30%;
+
+  .select-search {
+    &__input {
+      border: none;
+
+      &:hover {
+        border: none;
+      }
+    }
+  }
 }
