--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -411,7 +411,7 @@
   --text-medium-emphasis: rgba(255, 255, 255, 0.6);
   --cui-emphasis-color-rgb: rgba(255, 255, 255, 0.6);
   --cui-input-placeholder-color: rgba(255, 255, 255, 0.6);
-  --cui-tertiary-bg: var(--cyberdrain-dark);
+  //--cui-tertiary-bg: var(--cyberdrain-dark);
   // Core UI Impact theme variables.
   --cui-header-hover-color: var(--cyberdrain-light);
   --cui-header-active-color: var(--cyberdrain-accent-blue);
