Disable sass deprecation error messages as we have no control over these from CoreUI

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -318,7 +318,7 @@ $enable-shadows: true;
 // $enable-rfs:                        true !default;
 // $enable-validation-icons:           true !default;
 $enable-negative-margins: true;
-// $enable-deprecation-messages:       true !default;
+$enable-deprecation-messages: false !default;
 // $enable-important-utilities:        true !default;
 // $enable-contrast-ratio-correction:  true !default;
 // $enable-contrast-ratio-warnings:    false !default;
