--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -264,7 +264,7 @@
   --cui-input-focus-bg: var(--cyberdrain-light-striped);
   --cui-input-focus-border-colour: var(--cyberdrain-primary);
   --cui-input-focus-color: var(--cyberdrain-dark);
-  --cui-link-color: var(--cyberdrain-dark);
+  --cui-link-color-rgb: var(--cyberdrain-dark);
   --cui-link-hover-color: var(--cyberdrain-primary);
   --cui-list-group-bg: var(--cui-color-white) !important;
   --cui-list-group-color: var(--cyberdrain-dark);
@@ -452,7 +452,7 @@
   --cui-input-focus-bg: var(--cyberdrain-dark-striped);
   --cui-input-focus-border-color: var(--cyberdrain-primary);
   --cui-input-focus-color: var(--cyberdrain-primary);
-  --cui-link-color: var(--cyberdrain-light);
+  --cui-link-color-rgb: var(--cyberdrain-light);
   --cui-link-hover-color: var(--cyberdrain-primary);
   --cui-list-group-bg: var(--cyberdrain-dark);
   --cui-list-group-color: var(--cyberdrain-light);
