--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -312,7 +312,7 @@
   --cipp-table-primary-colour: var(--cyberdrain-dark);
   --cipp-table-secondary-colour: var(--cyberdrain-secondary);
   --cipp-table-sort-focus-bg: var(--cyberdrain-secondary);
-  --cipp-table-highlight-on-hover-bg: rgb(150, 150, 150);
+  //--cipp-table-highlight-on-hover-bg: rgb(150, 150, 150);
   --cipp-table-highlight-on-hover-color: rgb(150, 150, 150);
   --cipp-table-striped-bg: var(--cyberdrain-light-striped);
   --cipp-table-striped-colour: var(--cyberdrain-dark-striped);
@@ -500,7 +500,7 @@
   --cipp-table-primary-colour: var(--cyberdrain-light);
   --cipp-table-secondary-colour: var(--cui-gray-100);
   --cipp-table-sort-focus-bg: var(--cyberdrain-secondary);
-  --cipp-table-highlight-on-hover-bg: rgb(138, 136, 136);
+  // --cipp-table-highlight-on-hover-bg: rgb(138, 136, 136);
   --cipp-table-highlight-on-hover-color: rgb(138, 136, 136);
   --cipp-table-striped-bg: var(--cyberdrain-dark-striped);
   --cipp-table-striped-colour: var(--cyberdrain-light-striped);
