Logo replacement, redo CSS

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -544,8 +544,6 @@ h3.underline:after {
 
 .wrapper.d-flex.flex-column.min-vh-100 {
   background-color: var(--cui-color-gray-1) !important;
-  padding-top: 30px;
-  min-height: calc(100vh - 84px) !important;
   z-index: 2;
 
   // .body.flex-grow-1.px-xl-3>.container-fluid>div>div{
@@ -641,15 +639,9 @@ h3.underline:after {
 .sidebar-brand {
   background: none;
   .sidebar-brand-full {
-    margin-left: 30px;
-    height: 50px;
+    margin: 15px;
     transform: scale(1.5);
   }
-}
-
-.sidebar.sidebar-fixed {
-  margin-top: 69px;
-  height: calc(100vh - 69px);
 }
 .wrapper.d-flex.flex-column.min-vh-100 .card {
   margin-bottom: 0px;
@@ -705,11 +697,4 @@ i.glyphicon {
 
 .array-item-remove::after {
   content: 'Remove';
-}
-
-.stickyfooter {
-  position: sticky;
-  bottom: 0;
-  z-index: 0; /* Adjust this value as needed, should be lower than dropdowns */
-  /* Other styling as needed */
 }
