remove bouncing issue

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3,6 +3,9 @@
   position: relative;
   display: inline-block;
 }
+body {
+  overflow-y: scroll; // Always show vertical scrollbar
+}
 .image-upload-container {
   position: relative;
   width: 100px; /* Adjusted to match the image */
@@ -543,9 +546,9 @@ h3.underline:after {
 }
 
 .wrapper.d-flex.flex-column.min-vh-100 {
+  //full width -20px for scrollbar bouncing
   background-color: var(--cui-color-gray-1) !important;
   z-index: 2;
-
   // .body.flex-grow-1.px-xl-3>.container-fluid>div>div{
   //   background: var(--cui-color-white) !important;
   //   padding: 20px 30px;
