Update Theme Colors

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -1,8 +1,8 @@
 :root {
   // CyberDrain variables.
   //// If you want to change these variables please also update the _variables.scss file.
-  --cyberdrain-primary: #f77f00; // Orange
-  --cyberdrain-primary-rgb: rgb(247 127 0); // Orange
+  --cyberdrain-primary: #0099cc; // Orange
+  --cyberdrain-primary-rgb: rgb(0 153 204); // Orange
   --cyberdrain-secondary: #003049; // Prussian Blue
   --cyberdrain-secondary-rgb: rgb(0 48 73); // Prussian Blue
   --cyberdrain-lighter: #fff; // White
@@ -33,7 +33,7 @@
   --cui-purple: #6f42c1;
   --cui-pink: #d63384;
   --cui-red: #dc3545;
-  --cui-orange: #fd7e14;
+  --cui-orange: #0099cc;
   --cui-yellow: #ffc107;
   --cui-green: #198754;
   --cui-teal: #20c997;
@@ -226,7 +226,7 @@
   --cui-color-black: rgb(0, 0, 0);
   --cui-color-white: rgb(255, 255, 255);
   --cui-bgcolor-table-header: rgba(105, 105, 105, 0.973);
-  --cui-color-orange: #f77f00;
+  --cui-color-orange: #0099cc;
   --cui-color-header-bar: rgba(210, 210, 210, 0.8);
   --cui-color-table-border: rgba(210, 210, 210, 0.8);
   --cui-color-table-border: rgba(210, 210, 210, 0.8);
@@ -407,7 +407,7 @@
   --cui-color-gray-hover: rgba(46, 54, 58, 0.8);
   --cui-color-black: rgb(255, 255, 255);
   --cui-bgcolor-table-header: rgba(105, 105, 105, 0.973);
-  --cui-color-orange: #f77f00;
+  --cui-color-orange: #0099cc;
   --cui-color-table-border: rgba(146, 154, 158, 0.8);
   --cui-color-card-shadow: rgba(0, 0, 0, 0.8);
   --text-medium-emphasis: rgba(255, 255, 255, 0.6);
