--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -50,7 +50,7 @@
 // $purple:  #6f42c1 !default;
 // $pink:    #d63384 !default;
 // $red:     #dc3545 !default;
-// $orange:  #fd7e14 !default;
+// $orange:  #0099cc !default;
 // $yellow:  #ffc107 !default;
 // $green:   #198754 !default;
 // $teal:    #20c997 !default;
@@ -102,7 +102,7 @@ $search-selected-option-highlight-color: #ffffff;
 $search-group-header-bg: #eeeeee;
 
 // If you want to change these variables please also update the _themes.scss file.
-$cyberdrain-primary: #f77f00; // Orange
+$cyberdrain-primary: #0099cc; // Orange
 $cyberdrain-secondary: #003049; // Prussian Blue
 $cyberdrain-secondary-rgb: rgb(0 48 73); // Prussian Blue
 $cyberdrain-lighter: #fff; // White
