--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -125,11 +125,11 @@
     --cui-btn-hover-bg: var(--cyberdrain-warning);
     --cui-btn-hover-border-color: var(--cyberdrain-warning);
     --cui-btn-hover-color: var(--cyberdrain-darker);
-    --cui-btn-active-bg: #c78e11;
-    --cui-btn-active-border-color: #bb8510;
+    --cui-btn-active-bg: #118ac7;
+    --cui-btn-active-border-color: #118ac7;
     --cui-btn-active-color: var(--cyberdrain-darker);
-    --cui-btn-disabled-color: #f9b115;
-    --cui-btn-shadow: rgb(249 177 21 / 50%);
+    --cui-btn-disabled-color: #1570f9;
+    --cui-btn-shadow: rgba(21, 142, 249, 0.5);
   }
 
   .btn-ghost-danger {
