Re-Add Assets and Remove Logos.

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -2,7 +2,7 @@
   // CyberDrain variables.
   //// If you want to change these variables please also update the _variables.scss file.
   --cyberdrain-primary: #0099cc; // Orange
-  --cyberdrain-primary-rgb: rgb(0 153 204); // Orange
+  --cyberdrain-primary-rgb: rgb(0, 153, 204); // Orange
   --cyberdrain-secondary: #003049; // Prussian Blue
   --cyberdrain-secondary-rgb: rgb(0 48 73); // Prussian Blue
   --cyberdrain-lighter: #fff; // White
